--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/kartvizit-on.jpg" alt="Kartvizit Ön" class="banner">
+        <img src="./images/kartvizit-on.jpg" alt="Kartvizit Ön" class="banner">
         <h1>MD YAPI</h1>
         <p>Kaliteli Pimapen & Cam Balkon Çözümleri</p>
     </header>
