--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <footer>
-        <img src="images/kartvizit-arka.jpg" alt="Kartvizit Arka" class="footer-banner">
+        <img src=".images/kartvizit-arka.jpg" alt="Kartvizit Arka" class="footer-banner">
         <p>&copy; 2025 MD YAPI - Tüm hakları saklıdır.</p>
     </footer>
 </body>
